[package]
name = "rust-chain-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rust-chain = { path = "../rust-chain" }
sha2 = "0.10.2"
serde = { version = "1.0", features = ["derive"] }